<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#528585"
    tools:context=".FragmentHome">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="101dp"
            android:layout_height="98dp"
            android:layout_marginTop="136dp"
            android:layout_marginEnd="84dp"
            android:background="@color/背景"
            android:backgroundTint="@color/背景"
            android:scaleType="centerCrop"
            android:src="@mipmap/favorites"
            app:layout_constraintEnd_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/camerabutton1"
            android:layout_width="114dp"
            android:layout_height="100dp"
            android:layout_marginTop="136dp"
            android:backgroundTint="@color/背景"
            android:scaleType="centerCrop"
            android:src="@mipmap/camera"
            app:layout_constraintEnd_toStartOf="@+id/guideline17"
            app:layout_constraintHorizontal_bias="0.684"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            tools:ignore="SpeakableTextPresentCheck" />


        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="44dp"
            android:text="@string/START_DETECT"

            app:layout_constraintEnd_toEndOf="@id/guideline17"
            app:layout_constraintTop_toBottomOf="@+id/urleditText" />

        <EditText
            android:id="@+id/urleditText"
            android:layout_width="260dp"
            android:layout_height="56dp"
            android:layout_marginTop="68dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/ENTER_URL"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline14"
            tools:ignore="LabelFor,MissingConstraints" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="767dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/camerabutton1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.53"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="88dp"
            android:layout_height="68dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:background="@color/背景"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:src="@mipmap/settings_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>